2010-03-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/debug.c: Set open_time in debug_setup_1.

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amsamba.8.xml: document include/exclude expressions

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* UPGRADING: add note about accidentally linking new versions against old

2010-03-15  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Util.pod: added POD for slurp and burp

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amreport.pl: add tests for exit status for planner
	  failure

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: remove input_errors, as that's now the
	  caller's responsibility
	* installcheck/Amanda_Taper_Scribe.pl: corresponding changes
	* server-src/taper.pl: handle input errors directly

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tape-aix.c device-src/tape-ops.h device-src/tape-posix.c
	  device-src/tape-uware.c device-src/tape-xenix.c: add tape_fileno
	  function
	* installcheck/Amanda_Device.pl: add lots of tape-positioning
	  installcehcks
	* device-src/tape-device.c: fix positioning (adjust for funny bsf
	  behavior only in tape_device_seek_file)

2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: rename the default tapetype, since EXABYTE
	  sounds like it might actually be useful, but it's only 2M
	* man/xml-source/amanda.conf.5.xml: remove default
	* server-src/amcheck.c: only check whether fallback_splitsize < tape
	  length if splitting is enabled; check for a missing tapetype param

2010-03-14 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc06.  NOTEST

2010-03-11 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc05. 

2010-03-11  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: fixed order that messages are reported

2010-03-11 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc04
