@@ -1,4 +1,7 @@
 2010-03-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* man/xml-source/ampgsql.8.xml: Fix formatting.
+
+2010-03-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/debug.c: Set open_time in debug_setup_1.
 
 2010-03-15  Dustin J. Mitchell <dustin@zmanda.com>
